Fixed Icon label clipping

--- a/src/stylesheets/_SectionAboutMe.scss
+++ b/src/stylesheets/_SectionAboutMe.scss
@@ -13,5 +13,5 @@
 
   // Icon and Icon label sizing.
   .icon { font-size: 3.75em; }
-  .icon-label {font-size: 1.5em;margin-top: -20px; margin-bottom: 10px}
+  .icon-label {font-size: 1.5em;margin-top: -10px; margin-bottom: 10px}
 }
