--- a/src/stylesheets/_SectionProjects.scss
+++ b/src/stylesheets/_SectionProjects.scss
@@ -41,7 +41,7 @@
     border: solid 1px #CCCCCC;
 
     .icon {font-size: 2em}
-    .icon-label {font-size: 1.5em; margin-top: -15px;}
+    .icon-label {font-size: 1.5em; margin-top: -10px;}
   }
 
   .project-popover {
@@ -66,7 +66,7 @@
       padding-top: 10px;
 
       .icon { font-size: 2em;}
-      .icon-label {margin-top: -10px}
+      .icon-label {margin-top: -5px}
     }
 
   }
